[package]
name = "micrrou"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
readonly = "0.2"
ang = "0.5.0"
rand = "0.8"
num-traits = "0.2.15"

[dev-dependencies]
test-case = "1.1.0"

[[example]]
name = "blank_canvas"
