[package]
name = "macrrou"
description = "A procedural macro companion to micrrou"
repository = "https://github.com/blinking8888/micrrou"
readme = "README.md"
keywords = [ "graphics", "generative art", "drawing", "image" ]
categories = [ "api-bindings", "graphics", "multimedia"  ]
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
colored = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
