[package]

name = "micrrou"
description = "An interface to nannou to reduce boilerplate code"
repository = "https://github.com/blinking8888/micrrou"
readme = "README.md"
keywords = [ "graphics", "generative art", "drawing", "image" ]
categories = [ "api-bindings", "graphics", "multimedia"  ]
license = "MIT"
version = "0.2.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
readonly = "0.2"
ang = "0.5.0"
rand = "0.8"
num-traits = "0.2.15"
macrrou = { version = "0.1.0", path = "../macrrou", optional = true }

[dev-dependencies]
test-case = "1.1.0"

[[example]]
name = "blank_canvas"

[[example]]
name = "use_launch_nannou_app_macro"
required-features = ["macro"]

[[example]]
name = "mouse"

[[example]]
name = "keyboard"

[features]

default = []

macro = [ "macrrou" ]
