[package]
name = "micrrou"
description = "An interface to nannou to reduce boilerplate code"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
readonly = "0.2"
ang = "0.5"
rand = "0.8"
num-traits = "0.2"
macrrou = { version = "0.1", path = "../macrrou", optional = true }

[dev-dependencies]
test-case = "1.1"

[[example]]
name = "blank_canvas"

[[example]]
name = "use_launch_nannou_app_macro"
required-features = ["macro"]

[[example]]
name = "mouse"

[[example]]
name = "keyboard"

[features]

default = []

macro = [ "macrrou" ]
